--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,8 +1,8 @@
 /*
   Theme Name: UCB
-  Theme URL: https://Biharilegends.com/UCB-bootstrap-business-template/
-  Author: Biharilegends.com
-  License: https://Biharilegends.com/license/
+  Theme URL: https://gangaservices.com/UCB-bootstrap-business-template/
+  Author: gangaservices.com
+  License: https://gangaservices.com/license/
 */
 
 /*--------------------------------------------------------------
@@ -1579,4 +1579,9 @@ body.mobile-nav-active #mobile-nav-toggle {
   #mobile-nav-toggle {
     display: inline;
   }
+}
+
+
+.linkNotClickable{
+  cursor:pointer;
 }
